BusOne02/src/objects/Call2_Discussion_vod__c.object
<CustomObject>
    <description>This object stores all product discussions data recorded on any call, as well as allows for creating different product discussions layouts</description>
    <fields>
        <fullName>Account_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Tactic that is applied for this call discussion</description>
        <label>Account Tactic</label>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account for which the call discussion was delivered.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Discussions(Accounts)</relationshipLabel>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Denotes the type of activity (Dinner, Email, Discussion...).</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinner meeting</fullName>
                </value>
                <value>
                    <fullName>Email exchange</fullName>
                </value>
                <value>
                    <fullName>Lunch meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Contracts Discussion</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>Type of attendee.</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Contact_vod</fullName>
                </value>
                <value>
                    <fullName>Person_Account_vod</fullName>
                </value>
                <value>
                    <fullName>User_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call2_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent Call object</description>
        <label>Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Master-Detail Lookup to the call_header record for which this discussion was performed.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The date of the call. This is denormalized into the call discussion for usability purposes.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Text area to save comments about the discussion.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact for which the call discussion was delivered.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Discussions(Contacts)</relationshipLabel>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Discussions (Detail Group)</relationshipLabel>
        <relationshipName>Call_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussion_Topics__c</fullName>
        <description>Picklist of discussion topics.</description>
        <label>Discussion Topics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigator Meeting</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Efficacy</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Clinical Studies</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Ad Board</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Publication Support</fullName>
                </value>
                <value>
                    <fullName>Scientific Exchange</fullName>
                </value>
                <value>
                    <fullName>Site Readiness</fullName>
                </value>
                <value>
                    <fullName>Speaker Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For Internal Use</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <description>Intended use of the product.</description>
        <label>Indication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indication 1</fullName>
                </value>
                <value>
                    <fullName>Indication 2</fullName>
                </value>
                <value>
                    <fullName>Indication 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Discussion record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Event associated to the Call Discussion.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used for mobile integration.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <description>Picklist containing the available presentations.</description>
        <label>Presentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RLS Presentation</fullName>
                </value>
                <value>
                    <fullName>CHS Presentation</fullName>
                </value>
                <value>
                    <fullName>CHS Diabetic Presentation</fullName>
                </value>
                <value>
                    <fullName>CR Presentation</fullName>
                </value>
                <value>
                    <fullName>CR Presentation Diabetic Patients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the product strategy used in this call discussion.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product tactic used in this discussion.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product in the product catalog. This product is the topic of the call discussion.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Discussions</relationshipLabel>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted_Comments__c</fullName>
        <description>Text area to save restricted comments about the discussion.</description>
        <label>Restricted Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <description>Used to capture the slides presented during the discussion.</description>
        <label>Slides</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user for which the call discussion was delivered.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Map_vod__c</fullName>
        <description>Special field to create dependency relationships on call discussion fields based on product.  The picklist values for this field are the textual names of detailed products.  The values must be an exact match.  This field should not be placed on any of the call discussion layouts.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>Enbrel</fullName>
                </value>
                <value>
                    <fullName>Tecfidera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Discussion</label>
    <nameField>
        <displayFormat>CDI{000000000}</displayFormat>
        <label>Call Discussion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Discussions</pluralLabel>
    <recordTypes>
        <fullName>CallReport_vod</fullName>
        <active>true</active>
        <label>Call Report_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_vod</fullName>
        <active>true</active>
        <description>Record Type for Call Discussion Event Layouts</description>
        <label>Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSLMeetingBrief_vod</fullName>
        <active>true</active>
        <label>MSL Meeting Brief_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MeetingBrief_vod</fullName>
        <active>true</active>
        <description>Meeting Brief</description>
        <label>Meeting Brief_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>